--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.2.4",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "passport": "^0.7.0",
@@ -80,6 +81,7 @@
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/localforage": "^0.0.33",
     "@types/node": "^20.17.19",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
